--- a/UI/TouristDialog.ui
+++ b/UI/TouristDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>484</width>
-    <height>204</height>
+    <width>590</width>
+    <height>234</height>
    </rect>
   </property>
   <property name="font">
@@ -154,6 +154,9 @@
         <property name="horizontalScrollMode">
          <enum>QAbstractItemView::ScrollPerPixel</enum>
         </property>
+        <attribute name="verticalHeaderVisible">
+         <bool>false</bool>
+        </attribute>
         <column>
          <property name="text">
           <string>کد قایق</string>
